# prefect-gcp

./: .dockerignore  .gitignore  MANIFEST.in  README.md  project.cfg  pyproject.toml  requirements.in  requirements.txt  tox.ini
configs/: development.yaml  production.yaml  staging.yaml
docker/: Dockerfile  cloudbuild.yaml  docker-compose.yml
scripts/: image_build.sh
src/prefect_gcp/: __init__.py
src/prefect_gcp/beam/: pipeline.py
src/prefect_gcp/data/: __init__.py  process.py
src/prefect_gcp/dataflow/: runner.py
src/prefect_gcp/flow/: prefect.py
src/prefect_gcp/model/: __init__.py  train.py
src/prefect_gcp/train/: trainer.py
src/prefect_gcp/utils/: helpers.py
src/prefect_gcp/vertex/: job.py
tests/adhoc/: test_local_file.py
tests/scripts/: test_gcs_file.py  test_local_file.py
tests/unit/: test_process.py
