[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "prefect-gcp"
version = "0.1.0"
description = "A prototype project utilizing Apache Beam and Prefect on Google Cloud Platform."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

[project.scripts]
run-prefect-flow = "prefect_gcp.flows.prefect_flow:main"
run-dataflow = "prefect_gcp.dataflow.runner:main"