[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "prefect-gcp"
dynamic = ["version"]
description = "A prototype project utilizing Apache Beam and Prefect on Google Cloud Platform."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

[tool.setuptools.dynamic]
version = {file = "VERSION.txt"}

[project.scripts]
run-dataflow = "prefect_gcp.beam.pipeline:main"
run-prefect-flow = "prefect_gcp.flow.prefect:main"
run-trainer = "prefect_gcp.model.train:main"
run-vertex-job = "prefect_gcp.vertex.job:main"